--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>5.2.4</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
@@ -174,6 +180,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <version>2.1.1</version>
             </plugin>
+
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>5.2.4</version>
+            </plugin>
+
             <!-- Pack zips -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
